fix image stretch on mobile

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ nav {
 
 #project-list img {
     width: 100%;
-    height: auto;
+    height: 100%;
     max-height: 60vmin;
 }
 
